--- a/index.html
+++ b/index.html
@@ -59,12 +59,12 @@
         <div id="home-section">
             <header class="pt-20 pb-16 px-6 text-center relative max-w-5xl mx-auto">
                 <span class="inline-block px-4 py-1.5 rounded-full bg-purple-500/10 border border-purple-500/30 text-purple-300 text-xs font-bold uppercase mb-6">Premium Automation Software</span>
-                <h1 class="text-5xl md:text-7xl font-extrabold mb-6 leading-tight">All-in-One Toolkit for <br> <span class="text-transparent bg-clip-text bg-gradient-to-r from-purple-400 via-pink-400 to-blue-400 animate-pulse">Digital Marketers</span></h1>
+                <h1 class="text-5xl md:text-7xl font-extrabold mb-6 leading-tight">All-in-One Toolkit for <br> <span class="text-transparent bg-clip-text bg-gradient-to-r from-purple-400 via-pink-400 to-blue-400 animate-pulse">CPA Marketers</span></h1>
                 <button onclick="scrollToPricing()" class="px-8 py-3 bg-white text-black font-bold rounded-xl hover:bg-gray-200 transition mt-8 shadow-xl">Get Started Now</button>
             </header>
 
             <section id="public-courses" class="py-10 border-y border-white/5 bg-[#0b1121] overflow-hidden mb-10">
-                <div class="text-center mb-6"><h3 class="text-xs font-bold text-gray-500 uppercase tracking-widest flex justify-center items-center gap-2"><i class="ph-fill ph-graduation-cap text-purple-500"></i> Premium Courses</h3></div>
+                <div class="text-center mb-6"><h3 class="text-xs font-bold text-gray-500 uppercase tracking-widest flex justify-center items-center gap-2"><i class="ph-fill ph-graduation-cap text-purple-500"></i> আমাদের কোর্স সমূহ</h3></div>
                 <div class="marquee-container relative"><div id="publicCourseMarquee" class="marquee-content gap-6"></div></div>
             </section>
 
@@ -82,7 +82,7 @@
 
             <section id="pricing" class="py-20 px-6 bg-[#0b1121] border-t border-white/5 relative">
                 <div class="max-w-7xl mx-auto relative z-10">
-                    <div class="text-center mb-16"><h2 class="text-3xl font-bold mb-4">Simple Pricing</h2><p class="text-gray-400">Instant activation via Bkash/Nagad.</p></div>
+                    <div class="text-center mb-16"><h2 class="text-3xl font-bold mb-4">Simple Pricing</h2><p class="text-gray-400">Instant activation via Bkash/Nagad/Rocket.</p></div>
                     <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-6">
                         <div class="pricing-card"><h3 class="text-lg font-bold text-gray-300">Starter</h3><div class="my-4 text-3xl font-bold text-white">৳200<span class="text-xs font-normal">/7 Days</span></div><button onclick="openAuthModal('Starter - 200tk')" class="w-full py-2 bg-white/10 hover:bg-white/20 rounded-lg font-bold text-white text-sm">Buy Now</button></div>
                         <div class="pricing-card"><h3 class="text-lg font-bold text-gray-300">Standard</h3><div class="my-4 text-3xl font-bold text-white">৳500<span class="text-xs font-normal">/15 Days</span></div><button onclick="openAuthModal('Standard - 500tk')" class="w-full py-2 bg-white/10 hover:bg-white/20 rounded-lg font-bold text-white text-sm">Buy Now</button></div>
@@ -130,7 +130,7 @@
     </div>
 
     <a href="https://t.me/freelancernazmul" target="_blank" class="telegram-btn"><i class="ph-fill ph-telegram-logo"></i></a>
-    <footer class="bg-[#0b1121] border-t border-white/5 py-8 px-6 mt-12 text-center text-gray-600 text-xs"><p>Copyright ©️ 2026 ProToolsHub. All rights reserved.</p></footer>
+    <footer class="bg-[#0b1121] border-t border-white/5 py-8 px-6 mt-12 text-center text-gray-600 text-xs"><p> ©️ 2026 ProToolsHub. All rights reserved.</p></footer>
 
     <div id="lockModal" class="hidden fixed inset-0 z-[200] flex items-center justify-center bg-black/90 backdrop-blur-md p-6">
         <div class="bg-[#1e293b] border border-red-500/30 p-8 rounded-2xl max-w-sm w-full text-center shadow-2xl relative">
